<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".activitys.CadastrarCartaoCredito">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:layout_weight="0.80">

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingLeft="@dimen/dim_min"
            android:src="@drawable/arrow_green"
            />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:fitsSystemWindows="true"

            android:padding="@dimen/dim_default"
            android:layout_weight="8">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroud"

                    android:paddingTop="@dimen/dim_default"
                    android:text="@string/bt_cadastrar_cartao"
                    android:textColor="@color/branco"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="5">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint"
                    android:paddingTop="@dimen/dim_default">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/numero_cartao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="16sp"
                        android:hint="@string/hint_numcard" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint"
                    android:paddingTop="@dimen/dim_default">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nome_titular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:hint="@string/hint_nometitular"
                        />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dim_default"
                    >


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dim_default"
                        android:paddingRight="@dimen/dim_min"
                        android:theme="@style/EditTextHint"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:theme="@style/EditTextHint"
                            android:textSize="16sp"
                            android:id="@+id/vencimento_cartao"
                            android:inputType="number"
                            android:hint="@string/hint_vencimento" />

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dim_default"
                        android:paddingLeft="@dimen/dim_min"
                        android:theme="@style/EditTextHint"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/cartao_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:inputType="number"
                            android:maxLength="3"
                            android:hint="@string/hint_cvv" />

                    </android.support.design.widget.TextInputLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/salvar_cartao"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_gravity="bottom"
                        android:text="@string/bt_salvar_cartao"
                        android:textSize="18sp"
                        android:background="@drawable/bt_cadastro"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>





</LinearLayout>