<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".activitys.CadastrarCartaoCredito">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:layout_weight="0.80">

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingLeft="@dimen/dim_min"
            android:src="@drawable/arrow_green"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/dim_default"
        android:layout_weight="8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:src="@drawable/card"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="82dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroud"
                android:padding="@dimen/dim_default"
                android:text="@string/add_cartao"
                android:textAlignment="center"
                android:textColor="@color/branco"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroud"
                android:paddingBottom="@dimen/dim_default"
                android:paddingLeft="@dimen/dim_default"
                android:paddingRight="@dimen/dim_default"
                android:text="@string/add_cartao_info"
                android:textAlignment="center"
                android:textColor="@color/branco"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/cadastrar_cartao"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bt_cadastro"
                android:text="@string/bt_cadastrar_cartao"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>