<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context=".activitys.CadastrarCartaoCredito">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:gravity="center|left">

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingLeft="@dimen/dim_min"
            android:paddingTop="10dp"
            android:src="@drawable/arrow_green" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dim_default"
            android:paddingLeft="@dimen/dim_default"
            android:paddingRight="@dimen/dim_default">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_user"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="10px"
                    android:src="@drawable/teste" />

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroud"
                    android:paddingTop="@dimen/dim_min"
                    android:textAlignment="center"
                    android:textColor="@color/branco"
                    android:textSize="14sp"
                    tools:text="@string/name_composicao_teste" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rs_dinheiro"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="R$"
                        android:paddingRight="5dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/hint_default"
                        tools:ignore="RtlCompat" />


                    <EditText
                        android:id="@+id/valor_pagamento"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/hint_monetaria"
                        android:inputType="numberDecimal"
                        android:textAlignment="textStart"
                        android:theme="@style/EditText"
                        android:textSize="54sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nome_cartao"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Mastercard 1234 • "
                        android:textAlignment="textEnd" />

                    <TextView
                        android:id="@+id/editar_cartao"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.67"
                        android:text="EDITAR"
                        android:textAlignment="textStart"
                        android:textColor="@color/button_color"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/finalizar_pagamento"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/bt_cadastro"
                        android:text="@string/bt_pagar"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>